# badminton-player

./: .gitignore  Procfile  README.md  pyproject.toml  wsgi.py
.github/workflows/: deploy.yml
app/: __init__.py
app/badminton_player/: api.py  models.py
app/routes/: api.py  views.py
app/services/: __init__.py  club_service.py  discovery_service.py  models.py  player_service.py
app/templates/: 404.html  base.html  club.html  index.html  player.html  search.html
app/utils/: supabase_utils.py
