[tool.poetry]
name = "badminton-player"
version = "0.1.0"
description = ""
authors = ["Gustav <gustav-git@pm.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.0"
requests = "^2.28.2"
Flask = "^2.2.3"
pandas = "^2.2.3"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.2"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
supabase = "^2.10.0"
pyjarowinkler = "^1.8"
cachetools = "^5.3.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
# notebook = "^6.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
